compiler/lume_parser/src/snapshots/lume_parser__parser__tests__loop_snapshots@iter_loop_break.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"for pattern in collection { break; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    IteratorLoop(
                        IteratorLoop {
                            pattern: Identifier {
                                name: "pattern",
                                location: Location(
                                    24..31,
                                ),
                            },
                            collection: Variable(
                                Variable {
                                    name: Identifier {
                                        name: "collection",
                                        location: Location(
                                            35..45,
                                        ),
                                    },
                                },
                            ),
                            block: Block {
                                statements: [
                                    Break(
                                        Break {
                                            location: Location(
                                                48..54,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    46..56,
                                ),
                            },
                            location: Location(
                                20..56,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..58,
                ),
            },
            location: Location(
                0..58,
            ),
            documentation: None,
        },
    ),
]
