compiler/lume_parser/src/snapshots/lume_parser__parser__tests__loop_snapshots@iter_loop_continue.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"for pattern in collection { continue; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    IteratorLoop(
                        IteratorLoop {
                            pattern: Identifier {
                                name: "pattern",
                                location: Location(
                                    24..31,
                                ),
                            },
                            collection: Variable(
                                Variable {
                                    name: Identifier {
                                        name: "collection",
                                        location: Location(
                                            35..45,
                                        ),
                                    },
                                },
                            ),
                            block: Block {
                                statements: [
                                    Continue(
                                        Continue {
                                            location: Location(
                                                48..57,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    46..59,
                                ),
                            },
                            location: Location(
                                20..59,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..61,
                ),
            },
            location: Location(
                0..61,
            ),
            documentation: None,
        },
    ),
]
