compiler/lume_parser/src/snapshots/lume_parser__parser__tests__loop_snapshots@iter_loop_statement.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"for pattern in collection { let a = 0; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    IteratorLoop(
                        IteratorLoop {
                            pattern: Identifier {
                                name: "pattern",
                                location: Location(
                                    24..31,
                                ),
                            },
                            collection: Variable(
                                Variable {
                                    name: Identifier {
                                        name: "collection",
                                        location: Location(
                                            35..45,
                                        ),
                                    },
                                },
                            ),
                            block: Block {
                                statements: [
                                    VariableDeclaration(
                                        VariableDeclaration {
                                            name: Identifier {
                                                name: "a",
                                                location: Location(
                                                    52..53,
                                                ),
                                            },
                                            variable_type: None,
                                            value: Literal(
                                                Int(
                                                    IntLiteral {
                                                        value: 0,
                                                        location: Location(
                                                            56..57,
                                                        ),
                                                        kind: I32,
                                                    },
                                                ),
                                            ),
                                            location: Location(
                                                48..58,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    46..60,
                                ),
                            },
                            location: Location(
                                20..60,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..62,
                ),
            },
            location: Location(
                0..62,
            ),
        },
    ),
]
