compiler/lume_parser/src/snapshots/lume_parser__parser__tests__loop_snapshots@pred_loop_empty.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"while true { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    PredicateLoop(
                        PredicateLoop {
                            condition: Literal(
                                Boolean(
                                    BooleanLiteral {
                                        value: true,
                                        location: Location(
                                            26..30,
                                        ),
                                    },
                                ),
                            ),
                            block: Block {
                                statements: [],
                                location: Location(
                                    31..34,
                                ),
                            },
                            location: Location(
                                20..34,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..36,
                ),
            },
            location: Location(
                0..36,
            ),
            documentation: None,
        },
    ),
]
