compiler/lume_parser/src/snapshots/lume_parser__parser__tests__loop_snapshots@pred_loop_statement.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"while true { let a = 0; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    PredicateLoop(
                        PredicateLoop {
                            condition: Literal(
                                Boolean(
                                    BooleanLiteral {
                                        value: true,
                                        location: Location(
                                            26..30,
                                        ),
                                    },
                                ),
                            ),
                            block: Block {
                                statements: [
                                    VariableDeclaration(
                                        VariableDeclaration {
                                            name: Identifier {
                                                name: "a",
                                                location: Location(
                                                    37..38,
                                                ),
                                            },
                                            variable_type: None,
                                            value: Literal(
                                                Int(
                                                    IntLiteral {
                                                        value: 0,
                                                        location: Location(
                                                            41..42,
                                                        ),
                                                        kind: I32,
                                                    },
                                                ),
                                            ),
                                            location: Location(
                                                33..43,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    31..45,
                                ),
                            },
                            location: Location(
                                20..45,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..47,
                ),
            },
            location: Location(
                0..47,
            ),
            documentation: None,
        },
    ),
]
