compiler/lume_parser/src/snapshots/lume_parser__parser__tests__namespace_snapshots@path_1.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"namespace std\")"
---
[
    Namespace(
        Namespace {
            path: NamespacePath {
                path: [
                    Identifier {
                        name: "std",
                        location: Location(
                            10..13,
                        ),
                    },
                ],
                location: Location(
                    10..13,
                ),
            },
            location: Location(
                0..13,
            ),
        },
    ),
]
