compiler/lume_parser/src/snapshots/lume_parser__parser__tests__namespace_snapshots@path_2.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"namespace std::io\")"
---
[
    Namespace(
        Namespace {
            path: NamespacePath {
                path: [
                    Identifier {
                        name: "std",
                        location: Location(
                            10..13,
                        ),
                    },
                    Identifier {
                        name: "io",
                        location: Location(
                            15..17,
                        ),
                    },
                ],
                location: Location(
                    10..17,
                ),
            },
            location: Location(
                0..17,
            ),
        },
    ),
]
