compiler/lume_parser/src/snapshots/lume_parser__parser__tests__namespace_snapshots@path_3.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"namespace std::io::path\")"
---
[
    Namespace(
        Namespace {
            path: NamespacePath {
                path: [
                    Identifier {
                        name: "std",
                        location: Location(
                            10..13,
                        ),
                    },
                    Identifier {
                        name: "io",
                        location: Location(
                            15..17,
                        ),
                    },
                    Identifier {
                        name: "path",
                        location: Location(
                            19..23,
                        ),
                    },
                ],
                location: Location(
                    10..23,
                ),
            },
            location: Location(
                0..23,
            ),
        },
    ),
]
