compiler/lume_parser/src/snapshots/lume_parser__parser__tests__namespace_snapshots@path_casing.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"namespace System.IO\")"
---
[
    Namespace(
        Namespace {
            path: IdentifierPath {
                path: [
                    Identifier {
                        name: "System",
                        location: Location(
                            10..16,
                        ),
                    },
                    Identifier {
                        name: "IO",
                        location: Location(
                            17..19,
                        ),
                    },
                ],
                location: Location(
                    10..19,
                ),
            },
            location: Location(
                0..19,
            ),
        },
    ),
]
